--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,12 +38,12 @@ select {
 	border-radius: 12px; 
 }
 
-input {
+input#outputArea {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	resize: none;
-	width: 50%;
+	width: 700px;
 }
 
 button {
@@ -69,4 +69,11 @@ table {
 	margin-right:auto;
 	height: 100px;
 	border-spacing: 10px;
+}
+td.lefttop {
+	text-align: left;
+	vertical-align: top;
+}
+td.top {
+	vertical-align: top;
 }
